the_project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-project-svc
spec:
  type: ClusterIP
  selector:
    app: the-project
  ports:
    - name: http
      port: 1234
      targetPort: 3000
      protocol: TCP
